--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 # ES \u914D\u7F6E
-elasticsearch.hostAndPortList[0]=192.168.200.19:9200
+elasticsearch.hostAndPortList[0]=192.168.213.119:9200
 elasticsearch.username=
 elasticsearch.password=
+
+spring.thymeleaf.cache=false
+spring.thymeleaf.mode=HTML5
