--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,10 @@ elasticsearch.password=
 
 spring.thymeleaf.cache=false
 spring.thymeleaf.mode=HTML5
+
+# es-starter
+spring.elasticsearch.hostAndPortList[0]=192.168.213.119:9200
+spring.elasticsearch.hostAndPortList[1]=192.168.213.118:9200
+spring.elasticsearch.auth=false
+spring.elasticsearch.username=
+spring.elasticsearch.password=
